Fixed About page alignment, modified hover effect for API results

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -109,7 +109,7 @@ $neutral-extra-light: #eeeeee;
 
 html, body {
   background: $neutral-extra-light;
-  height:100%;
+  height: 100%;
 }
 
 body {
@@ -222,6 +222,7 @@ body {
   opacity: 0.8;
 }
 
+
 /*** API RESULTS ***/
 
 .API-logo {
@@ -242,7 +243,6 @@ body {
   -ms-transition: all 300ms linear;
   -kthtml-transition: all 300ms linear;
   transition: all 300ms linear;
-
 }
 
 .results-box-content {
@@ -281,6 +281,7 @@ body {
   color: $primary-color;
 }
 
+
 /*** MASONRY STYLES ***/
 
 *, *:before, *:after {box-sizing:  border-box !important;}
@@ -299,6 +300,7 @@ body {
   width:  100%;
 }
 
+
 /*** FOOTER STYLES ***/
 
 #footer {
@@ -307,6 +309,19 @@ body {
   background-color: $neutral-extra-light;
   height: 300px;
 }
+
+ 
+/*.wrapper {
+  min-height: 100%;
+  height: 100%;
+  margin: 0 auto -300px;
+}
+
+.push {
+  height: 300px;
+  width:100%;
+}*/
+
 
 .footer-content {
   margin-top: 150px;
@@ -318,6 +333,7 @@ body {
   margin: 0 20px;
   color: $neutral-dark;
 }
+
 
 /*** GENERAL STYLES ***/
 
